syntax = "proto3";

package kaboomproto;
option go_package = "github.com/fsufitch/kaboom/proto/go;kaboomproto";

import "color.proto";
import "position.proto";

// PieceKind represents the different kinds of chess pieces.
enum PieceKind {
    INVALID_PIECE = 0;
    PAWN = 1;
    KNIGHT = 2;
    BISHOP = 3;
    ROOK = 4;
    QUEEN = 5;
    KING = 6;
}

// ChessPiece represents a specific chess piece in the game.
// It is "location-aware" and knows which board it is on, its position, and its zone.
message ChessPiece {
    string uuid = 1;

    PieceKind kind = 2;
    Color color = 3;

    string board_uuid = 4;
    Position position = 5;
    ZoneKind zone = 6;
}